[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "vdfx"
version = "1.0.1"
requires-python = ">= 3.13.2"
license = "MIT"
description = "Valve Data File for Python"
readme = "README.md"

dependencies = ["lark >= 1.3.1"]

[project.urls]
"Source" = "https://github.com/Vancura1337/vdfx"
